# climb-rs

./: .gitignore  Cargo.toml  README.md  commitlint.config.mjs
.github/workflows/: ci.yaml  commitlint.yaml
climb-db/: Cargo.toml  README.md  diesel.toml
climb-db/migrations/2024-08-16-045333_create_climbs/: down.sql  up.sql
climb-db/migrations/2024-08-18-040635_create_formations/: down.sql  up.sql
climb-db/migrations/2024-08-18-043141_create_areas/: down.sql  up.sql
climb-db/migrations/2024-08-19-043720_create_climb_belongs_to/: down.sql  up.sql
climb-db/migrations/2024-08-26-041136_create_formation_belongs_to/: down.sql  up.sql
climb-db/migrations/2024-08-27-033528_create_area_belongs_to/: down.sql  up.sql
climb-db/migrations/2024-08-29-030512_create_grades/: down.sql  up.sql
climb-db/migrations/2024-09-01-155736_add_formation_location/: down.sql  up.sql
climb-db/migrations/2024-09-02-045203_add_climb_descriptions/: down.sql  up.sql
climb-db/migrations/2024-09-02-055617_add_climb_variations/: down.sql  up.sql
climb-db/migrations/2024-09-02-061237_add_climb_linkups/: down.sql  up.sql
climb-db/migrations/2024-09-07-031620_add_ascents/: down.sql  up.sql
climb-db/migrations/2024-10-07-035631_create_vermin_grades/: down.sql  up.sql
climb-db/src/: lib.rs  models.rs  schema.patch  schema.rs
climb-db/tests/: area-belongs-to.rs  climb-belongs-to.rs  climb-descriptions.rs  climb-variations.rs  formation-belongs-to.rs  formation-spacial.rs  grades.rs  migrations.rs
climb-db/tests/common/: mod.rs
climb-grades/: Cargo.toml
climb-grades/src/: lib.rs  vermin.rs
climb-graphql/: Cargo.toml
climb-graphql/src/: main.rs  queries.rs  schema.rs
