[package]
name = "climb-db"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.2", features = ["postgres"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }

[[test]]
name = "migrations"
path = "tests/migrations.rs"

[[test]]
name = "climb-belongs-to"
path = "tests/climb-belongs-to.rs"

[[test]]
name = "formation-belongs-to"
path = "tests/formation-belongs-to.rs"

[[test]]
name = "area-belongs-to"
path = "tests/area-belongs-to.rs"
